convert to jest

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel -p 3000 index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "t": "jest --watch --noStackTrace",
+    "test": "jest"
   },
   "keywords": [
     "interview"
@@ -13,10 +14,13 @@
   "author": "Roman Morozov",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^24.0.5",
     "ceylon": "^0.9.1",
+    "jest": "^24.1.0",
     "nodemon": "^1.18.9",
     "parcel-bundler": "^1.11.0",
     "prettier": "^1.16.3",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.3.1"
