--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "typeRoots": [
-      "node_modules/@types",
-      "node_modules/"
+      "node_modules/@types"
     ],
     "noUnusedLocals": true,
     "importHelpers": true,
