--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "Debug Jest Tests",
             "type": "node",
             "request": "launch",
+            "disableOptimisticBPs": true,
             "runtimeArgs": [
                 "--inspect-brk",
                 "${workspaceRoot}/node_modules/.bin/jest",
