--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel -p 3000 index.html",
+    "p": "parcel -p 3000",
     "t": "jest --watch --noStackTrace",
     "test": "jest"
   },
@@ -14,14 +15,18 @@
   "author": "Roman Morozov",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^24.0.9",
-    "jest": "^24.3.1",
-    "nodemon": "^1.18.10",
-    "parcel-bundler": "^1.12.0",
-    "prettier": "^1.16.4",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.13.1",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.137",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.1",
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
